@@ -1083,3 +1083,4 @@ The following functions accept any form a path. The INI and language INI functio
 2019-02-22: Added: DO_SYNC and NO_SYNC - human-friendly arguments to OSDMenuUpdate()
             Fixed: OSDMenuGetW() and OSDMenuPutS() could not handle all sizes of the standard fonts (new: use size + 0xB for bold fonts)
             Added: OSDMenuGetH() to get a string's height
+            Added: OSDMenuGetW(), OSDMenuGetH() and OSDMenuPutS() made public (i.e. part of the API)
